Various enhancements for json parsing and api improvemebts